# MCP-Claude-mem-local

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.example  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  viewer.html  web_ui.py
.github/workflows/: ci.yml
docs/: ACT-R.md  AGENTS-TEMPLATE.md  Act-r impacts.md  MCP-Claude-mem-local-Documentation-Technique.md  MCP-Claude-mem-local-Product-Description.md  MIGRATION.md  TASKS.md  getting-started.md  hooks-prompts-capture.md
plugins/hooks/: hooks.json
plugins/scripts/: capture-prompt.py  context-hook.py
scripts/: init.sql  migrate-categories.sql  migrate.py  security-check.sh
scripts/migrations/: 001_actr_schema.sql
src/: actr_scoring.py  api_server.py  forgetting.py  server.py
tests/: test_actr_scoring.py  test_forgetting.py  test_server.py
